// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MacrosSettingsForm/> should display a loader when fetching a macro 1`] = `
<MacrosSettingsFormContainer
  agents={Immutable.Map {}}
  macroCreated={[MockFunction]}
  macroDeleted={[MockFunction]}
  macroFetched={[MockFunction]}
  macroUpdated={[MockFunction]}
  macros={Object {}}
  match={
    Object {
      "isExact": true,
      "params": Object {
        "macroId": "1",
      },
      "path": "foo/",
      "url": "foo/",
    }
  }
  notify={[MockFunction]}
>
  <div
    className="full-width"
  >
    <PageHeader
      title={
        <Breadcrumb
          tag="ol"
        >
          <BreadcrumbItem
            tag="li"
          >
            <Link
              to="/app/settings/macros"
            >
              Macros
            </Link>
          </BreadcrumbItem>
          <BreadcrumbItem
            active={true}
            tag="li"
          >
            Edit
          </BreadcrumbItem>
        </Breadcrumb>
      }
    >
      <div
        className="d-flex align-items-center justify-content-between flex-wrap page-header"
      >
        <Breadcrumb
          tag="ol"
        >
          <ol
            className="breadcrumb"
          >
            <BreadcrumbItem
              tag="li"
            >
              <li
                className="breadcrumb-item"
              >
                <Link
                  to="/app/settings/macros"
                >
                  <a
                    to="/app/settings/macros"
                  >
                    Macros
                  </a>
                </Link>
              </li>
            </BreadcrumbItem>
            <BreadcrumbItem
              active={true}
              tag="li"
            >
              <li
                className="active breadcrumb-item"
              >
                Edit
              </li>
            </BreadcrumbItem>
          </ol>
        </Breadcrumb>
      </div>
    </PageHeader>
    <Container
      className="page-container container"
      fluid={true}
      tag="div"
    >
      <div
        className="page-container container container-fluid"
      >
        <Loader
          inline={false}
          minHeight="500px"
          size="40px"
        >
          <div
            className="container"
          >
            <div
              className="inner"
              style={
                Object {
                  "minHeight": "500px",
                }
              }
            >
              <i
                className="icon-custom icon-circle-o-notch md-spin"
                style={
                  Object {
                    "fontSize": "40px",
                  }
                }
              />
            </div>
          </div>
        </Loader>
      </div>
    </Container>
  </div>
</MacrosSettingsFormContainer>
`;

exports[`<MacrosSettingsForm/> should notify the user when failed to fetch the macro 1`] = `
<MacrosSettingsFormContainer
  agents={Immutable.Map {}}
  macroCreated={[MockFunction]}
  macroDeleted={[MockFunction]}
  macroFetched={[MockFunction]}
  macroUpdated={[MockFunction]}
  macros={Object {}}
  match={
    Object {
      "isExact": true,
      "params": Object {
        "macroId": "1",
      },
      "path": "foo/",
      "url": "foo/",
    }
  }
  notify={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "message": "Failed to fetch macro",
            "status": "error",
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <div
    className="full-width"
  >
    <PageHeader
      title={
        <Breadcrumb
          tag="ol"
        >
          <BreadcrumbItem
            tag="li"
          >
            <Link
              to="/app/settings/macros"
            >
              Macros
            </Link>
          </BreadcrumbItem>
          <BreadcrumbItem
            active={true}
            tag="li"
          >
            Edit
          </BreadcrumbItem>
        </Breadcrumb>
      }
    >
      <div
        className="d-flex align-items-center justify-content-between flex-wrap page-header"
      >
        <Breadcrumb
          tag="ol"
        >
          <ol
            className="breadcrumb"
          >
            <BreadcrumbItem
              tag="li"
            >
              <li
                className="breadcrumb-item"
              >
                <Link
                  to="/app/settings/macros"
                >
                  <a
                    to="/app/settings/macros"
                  >
                    Macros
                  </a>
                </Link>
              </li>
            </BreadcrumbItem>
            <BreadcrumbItem
              active={true}
              tag="li"
            >
              <li
                className="active breadcrumb-item"
              >
                Edit
              </li>
            </BreadcrumbItem>
          </ol>
        </Breadcrumb>
      </div>
    </PageHeader>
    <Container
      className="page-container container"
      fluid={true}
      tag="div"
    >
      <div
        className="page-container container container-fluid"
      >
        <Loader
          inline={false}
          minHeight="500px"
          size="40px"
        >
          <div
            className="container"
          >
            <div
              className="inner"
              style={
                Object {
                  "minHeight": "500px",
                }
              }
            >
              <i
                className="icon-custom icon-circle-o-notch md-spin"
                style={
                  Object {
                    "fontSize": "40px",
                  }
                }
              />
            </div>
          </div>
        </Loader>
      </div>
    </Container>
  </div>
</MacrosSettingsFormContainer>
`;

exports[`<MacrosSettingsForm/> should render a filled form when passed macro id 1`] = `
<MacrosSettingsFormContainer
  agents={Immutable.Map {}}
  macroCreated={[MockFunction]}
  macroDeleted={[MockFunction]}
  macroFetched={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "actions": Array [
              Object {
                "arguments": Object {
                  "tags": "refund",
                },
                "name": "addTags",
                "title": "Add Refund Tag",
                "type": "user",
              },
              Object {
                "arguments": Object {
                  "tags": "refund accepted",
                },
                "name": "addTags",
                "title": "Add Refund Accepted Tag",
                "type": "user",
              },
              Object {
                "arguments": Object {
                  "body_html": "<div>Hello {{ticket.customer.name}},</div><br/><div>Thanks for placing an order with our company.</div><br/><div>Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.</div><br/><div>If you have any questions, concerns or comments, please don’t hesitate to reach out.</div><br/><div>Have a great day and thanks for using our service!</div><br/><div>Sincerely,</div><div>{{current_user.name}}</div>",
                  "body_text": "Hello {{ticket.customer.name}},

Thanks for placing an order with our company.

Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.

If you have any questions, concerns or comments, please don’t hesitate to reach out.

Have a great day and thanks for using our service!

Sincerely,
{{current_user.name}}",
                },
                "description": "Hello {{ticket.customer.name}},

Thanks for placing an order with our company.

Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.

If you have any questions, concerns or comments, please don’t hesitate to reach out.

Have a great day and thanks for using our service!

Sincerely,
{{current_user.name}}",
                "name": "setResponseText",
                "title": "Set Response Text",
                "type": "user",
              },
              Object {
                "arguments": Object {
                  "headers": Array [
                    Object {
                      "editable": false,
                      "key": "X_API_KEY",
                      "value": "9298jjdhdjkh393jhajkhdjashuurh",
                    },
                    Object {
                      "editable": false,
                      "key": "content-type",
                      "value": "application/json",
                    },
                  ],
                  "method": "GET",
                  "params": Array [
                    Object {
                      "editable": false,
                      "key": "user_id",
                      "value": "{ticket.customer.id}",
                    },
                  ],
                  "url": "https://httpbin.org/post",
                },
                "description": "Refund the user's last month ",
                "name": "http",
                "title": "Refund Last Month",
                "type": "user",
              },
            ],
            "created_datetime": "2017-08-01T17:56:51.190187+00:00",
            "id": 1,
            "name": "Waive Fee",
            "updated_datetime": "2017-08-01T17:56:51.190199+00:00",
            "usage": 1,
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  macroUpdated={[MockFunction]}
  macros={
    Object {
      "1": Object {
        "actions": Array [
          Object {
            "arguments": Object {
              "tags": "refund",
            },
            "name": "addTags",
            "title": "Add Refund Tag",
            "type": "user",
          },
          Object {
            "arguments": Object {
              "tags": "refund accepted",
            },
            "name": "addTags",
            "title": "Add Refund Accepted Tag",
            "type": "user",
          },
          Object {
            "arguments": Object {
              "body_html": "<div>Hello {{ticket.customer.name}},</div><br/><div>Thanks for placing an order with our company.</div><br/><div>Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.</div><br/><div>If you have any questions, concerns or comments, please don’t hesitate to reach out.</div><br/><div>Have a great day and thanks for using our service!</div><br/><div>Sincerely,</div><div>{{current_user.name}}</div>",
              "body_text": "Hello {{ticket.customer.name}},

Thanks for placing an order with our company.

Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.

If you have any questions, concerns or comments, please don’t hesitate to reach out.

Have a great day and thanks for using our service!

Sincerely,
{{current_user.name}}",
            },
            "description": "Hello {{ticket.customer.name}},

Thanks for placing an order with our company.

Due to ||reason for the refund||, we will be happy to adjust your order to reflect the correct amount. Please allow 1-5 business days for any charges to reconcile with your account. We apologize for the inconvenience.

If you have any questions, concerns or comments, please don’t hesitate to reach out.

Have a great day and thanks for using our service!

Sincerely,
{{current_user.name}}",
            "name": "setResponseText",
            "title": "Set Response Text",
            "type": "user",
          },
          Object {
            "arguments": Object {
              "headers": Array [
                Object {
                  "editable": false,
                  "key": "X_API_KEY",
                  "value": "9298jjdhdjkh393jhajkhdjashuurh",
                },
                Object {
                  "editable": false,
                  "key": "content-type",
                  "value": "application/json",
                },
              ],
              "method": "GET",
              "params": Array [
                Object {
                  "editable": false,
                  "key": "user_id",
                  "value": "{ticket.customer.id}",
                },
              ],
              "url": "https://httpbin.org/post",
            },
            "description": "Refund the user's last month ",
            "name": "http",
            "title": "Refund Last Month",
            "type": "user",
          },
        ],
        "created_datetime": "2017-08-01T17:56:51.190187+00:00",
        "id": 1,
        "name": "Waive Fee",
        "updated_datetime": "2017-08-01T17:56:51.190199+00:00",
        "usage": 1,
      },
    }
  }
  match={
    Object {
      "isExact": true,
      "params": Object {
        "macroId": "1",
      },
      "path": "foo/",
      "url": "foo/",
    }
  }
  notify={[MockFunction]}
>
  <div
    className="full-width"
  >
    <PageHeader
      title={
        <Breadcrumb
          tag="ol"
        >
          <BreadcrumbItem
            tag="li"
          >
            <Link
              to="/app/settings/macros"
            >
              Macros
            </Link>
          </BreadcrumbItem>
          <BreadcrumbItem
            active={true}
            tag="li"
          >
            Edit: Waive Fee
          </BreadcrumbItem>
        </Breadcrumb>
      }
    >
      <div
        className="d-flex align-items-center justify-content-between flex-wrap page-header"
      >
        <Breadcrumb
          tag="ol"
        >
          <ol
            className="breadcrumb"
          >
            <BreadcrumbItem
              tag="li"
            >
              <li
                className="breadcrumb-item"
              >
                <Link
                  to="/app/settings/macros"
                >
                  <a
                    to="/app/settings/macros"
                  >
                    Macros
                  </a>
                </Link>
              </li>
            </BreadcrumbItem>
            <BreadcrumbItem
              active={true}
              tag="li"
            >
              <li
                className="active breadcrumb-item"
              >
                Edit: Waive Fee
              </li>
            </BreadcrumbItem>
          </ol>
        </Breadcrumb>
      </div>
    </PageHeader>
    <Container
      className="page-container container"
      fluid={true}
      tag="div"
    >
      <div
        className="page-container container container-fluid"
      >
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <form
            className=""
            onSubmit={[Function]}
          >
            <Component
              actions={
                Immutable.List [
                  Immutable.Map {
                    "type": "user",
                    "execution": "front",
                    "name": "setResponseText",
                    "title": "Add response text",
                    "arguments": Immutable.Map {
                      "body_text": "",
                      "body_html": "",
                    },
                  },
                ]
              }
              agents={Immutable.Map {}}
              currentMacro={
                Immutable.Map {
                  "name": "New macro",
                  "actions": Immutable.List [
                    Immutable.Map {
                      "type": "user",
                      "execution": "front",
                      "name": "setResponseText",
                      "title": "Add response text",
                      "arguments": Immutable.Map {
                        "body_text": "",
                        "body_html": "",
                      },
                    },
                  ],
                }
              }
              name="New macro"
              setActions={[Function]}
              setIntent={[Function]}
              setName={[Function]}
            >
              MacroEdit
            </Component>
            <FormGroup
              className="mt-5"
              tag="div"
            >
              <div
                className="mt-5 form-group"
              >
                <Button
                  className="mr-2"
                  color="success"
                  disabled={false}
                  tag="button"
                  type="submit"
                >
                  <button
                    className="mr-2 btn btn-success"
                    disabled={false}
                    onClick={[Function]}
                    type="submit"
                  >
                    Update macro
                  </button>
                </Button>
                <Button
                  className=""
                  color="secondary"
                  disabled={false}
                  onClick={[Function]}
                  tag="button"
                  type="button"
                >
                  <button
                    className="btn btn-secondary"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    Duplicate macro
                  </button>
                </Button>
                <Component
                  className="float-right"
                  color="secondary"
                  confirm={[Function]}
                  confirmColor="danger"
                  content="You are about to delete this macro."
                  loading={false}
                  type="button"
                >
                  <div
                    onClick={[Function]}
                  >
                    <i
                      className="material-icons mr-2 deleteIcon"
                    >
                      delete
                    </i>
                    Delete macro
                  </div>
                </Component>
              </div>
            </FormGroup>
          </form>
        </Form>
      </div>
    </Container>
  </div>
</MacrosSettingsFormContainer>
`;

exports[`<MacrosSettingsForm/> should render an empty form when no macro id 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/macros"
          >
            Macros
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          Add macro
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="page-container container"
    fluid={true}
    tag="div"
  >
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <Component
        actions={
          Immutable.List [
            Immutable.Map {
              "type": "user",
              "execution": "front",
              "name": "setResponseText",
              "title": "Add response text",
              "arguments": Immutable.Map {
                "body_text": "",
                "body_html": "",
              },
            },
          ]
        }
        agents={Immutable.Map {}}
        currentMacro={
          Immutable.Map {
            "name": "New macro",
            "actions": Immutable.List [
              Immutable.Map {
                "type": "user",
                "execution": "front",
                "name": "setResponseText",
                "title": "Add response text",
                "arguments": Immutable.Map {
                  "body_text": "",
                  "body_html": "",
                },
              },
            ],
          }
        }
        name="New macro"
        setActions={[Function]}
        setIntent={[Function]}
        setName={[Function]}
      />
      <FormGroup
        className="mt-5"
        tag="div"
      >
        <Button
          className="mr-2"
          color="success"
          disabled={false}
          tag="button"
          type="submit"
        >
          Create macro
        </Button>
      </FormGroup>
    </Form>
  </Container>
</div>
`;
